Dodanie objaśnień, komentarzy. Code cleanup